# lightdb

./: .gitignore  Cargo.toml  README.md  build.rs  light_api.proto
.github/workflows/: ci.yml
examples/: engine.rs  server.rs
lightkv/: Cargo.toml
lightkv/src/: engine.rs  errors.rs  lib.rs  macros.rs  options.rs  types.rs
lightkv/src/data/: log_record.rs
lightkv/src/index/: skiplist.rs
src/: engine.rs  errors.rs  lib.rs  options.rs
src/data/: data_file.rs  log_record.rs
src/fio/: file_io.rs  mmap_io.rs  mod.rs
src/index/: b_plus_tree.rs  btree.rs  mod.rs
src/proto/: api.rs
src/service/: mod.rs
src/storage/: mod.rs
