[package]
name = "lightkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
parking_lot = "0.12.1"
log = "0.4.0"
env_logger = "0.10.0"
thiserror = "1.0.38"
bytes = "1.4.0"
prost = "0.11.8"
crc32fast = "1.3.2"
tokio = { version = "1", features = ["full" ] }
serde = { version = "1", features = ["derive"] }
crossbeam-skiplist = "0.1.1"
clap = { version = "4.1.10", features = ["derive"] }
memmap2 = "0.5.10"


[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
